--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,28 @@
     <title>ライフブック!</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="生活に役立つツールをまとめました。" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@jpnwtgmd" />
+    <meta name="twitter:image" content="/assets/img/ogp.jpg" />
+    <meta name="twitter:title" content="ライフブック!" />
+    <meta
+      name="twitter:description"
+      content="ライフブック!は生活に役立つツールをまとめたサイトです。"
+    />
+    <meta name="twitter:domain" content="life-book.netlify.app" />
+    <meta property="og:site_name" content="ライフブック!" />
+    <meta property="og:locale" content="ja_JP" />
+    <meta property="og:title" content="ライフブック!" />
+    <meta
+      property="og:description"
+      content="ライフブック!は生活に役立つツールをまとめたサイトです。"
+    />
+    <meta property="og:url" content="https://life-book.netlify.app/" />
+    <meta property="og:image" content="/assets/img/ogp.jpg" />
+    <meta
+      name="google-site-verification"
+      content="09s96XxdCbUSUWjaN6HENJFMOMb36iOXnJ9OD_aIFZo"
+    />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
