--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       content="ライフブック!は生活に役立つツールをまとめたサイトです。"
     />
     <meta property="og:url" content="https://life-book.netlify.app/" />
-    <meta property="og:image" content="/assets/img/ogp.jpg" />
+    <meta property="og:image" content="/dist/life-calc/assets/img/ogp.jpg" />
     <meta
       name="google-site-verification"
       content="09s96XxdCbUSUWjaN6HENJFMOMb36iOXnJ9OD_aIFZo"
