--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@jpnwtgmd" />
-    <meta name="twitter:image" content="/assets/img/ogp.jpg" />
+    <meta
+      name="twitter:image"
+      content="https://life-book.netlify.app/assets/img/ogp.jpg"
+    />
     <meta name="twitter:title" content="ライフブック!" />
     <meta
       name="twitter:description"
@@ -22,7 +25,10 @@
       content="ライフブック!は生活に役立つツールをまとめたサイトです。"
     />
     <meta property="og:url" content="https://life-book.netlify.app/" />
-    <meta property="og:image" content="/dist/life-calc/assets/img/ogp.jpg" />
+    <meta
+      property="og:image"
+      content="https://life-book.netlify.app/assets/img/ogp.jpg"
+    />
     <meta
       name="google-site-verification"
       content="09s96XxdCbUSUWjaN6HENJFMOMb36iOXnJ9OD_aIFZo"
