--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,10 @@
       property="og:description"
       content="ライフブック!は生活に役立つツールをまとめたサイトです。"
     />
+    <meta
+      name="description"
+      content="ライフブック!は生活に役立つツールをまとめたサイトです。"
+    />
     <meta property="og:url" content="https://life-book.netlify.app/" />
     <meta
       property="og:image"
